# analisis-ketahanan-pangan-provinsi-lampung

./: .env.example  .gitignore  README.md  TODO.md  check-system.sh  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  restart-system.sh  run_bronze.sh  run_gold.sh  run_silver.sh  setup_dev_env.sh  start-system.sh  stop-system.sh  validate-env.sh
configs/hadoop/: core-site.xml  hadoop.env  hdfs-site.xml
configs/hive/: hive-site.xml  hive.env
configs/spark/: spark-defaults.conf
dags/: lampung_foodsec_dag.py
datasets/: cuaca.csv  harga_pangan.csv  ikp.csv  konsumsi_pangan.csv  produksi_pangan.csv  sosial_ekonomi.csv
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DEVELOPMENT.md  SUPERSET_GUIDE.md  TYPE_CHECKING.md
scripts/: calc_gold_enriched.py  calc_indikator.py  cleanup_imports.sh  format_code.sh  run_tests.sh  type_check.sh
src/: __init__.py
src/config/: __init__.py  settings.py
src/etl/gold/: calc_gold_enriched.py  calc_indikator.py
src/etl/silver/: clean_cuaca.py  clean_harga.py  clean_ikp.py  clean_konsumsi_pangan.py  clean_produksi.py  clean_sosial_ekonomi.py
src/utils/: __init__.py  data_quality.py  spark_utils.py
tests/: conftest.py
tests/unit/: test_config.py
